--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Don't put developer key in repository
+DeveloperKey.java
+
 # Compiled class file
 *.class
 
@@ -18,6 +21,7 @@
 *.zip
 *.tar.gz
 *.rar
+!/CanvasProjectManager/lib/*.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
